--- a/ControlMedico/ControlMedico/ControlMedico.csproj
+++ b/ControlMedico/ControlMedico/ControlMedico.csproj
@@ -33,6 +33,9 @@
 	    <Compile Update="View\ViewMedico\NavegacionMedico.xaml.cs">
 	      <DependentUpon>NavegacionMedico.xaml</DependentUpon>
 	    </Compile>
+	    <Compile Update="View\ViewMedico\InicioMedico.xaml.cs">
+	      <DependentUpon>InicioMedico.xaml</DependentUpon>
+	    </Compile>
     </ItemGroup>
 	
   <ItemGroup>
@@ -47,9 +50,6 @@
     </EmbeddedResource>
     <EmbeddedResource Update="View\ViewMedico\Pacientes.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
-    <EmbeddedResource Update="View\ViewMedico\PrincipalMedico.xaml">
-      <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="View\ViewPaciente\PrincipalPaciente.xaml">
       <Generator>MSBuild:Compile</Generator>
