--- a/ControlMedico/ControlMedico.Android/ControlMedico.Android.csproj
+++ b/ControlMedico/ControlMedico.Android/ControlMedico.Android.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>7.2.0.564</Version>
+    </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm">
       <Version>7.1.2</Version>
     </PackageReference>
