--- a/ControlMedico/ControlMedico/ControlMedico.csproj
+++ b/ControlMedico/ControlMedico/ControlMedico.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs" Version="7.2.0.564" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="7.1.2" />
     <PackageReference Include="MySqlConnector" Version="2.1.11" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
