--- a/ControlMedico/ControlMedico.Android/ControlMedico.Android.csproj
+++ b/ControlMedico/ControlMedico.Android/ControlMedico.Android.csproj
@@ -67,6 +67,9 @@
     <PackageReference Include="MySqlConnector">
       <Version>2.1.11</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.LocalNotification">
+      <Version>9.2.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Data.Common">
       <Version>4.3.0</Version>
     </PackageReference>
