--- a/ControlMedico/ControlMedico/ControlMedico.csproj
+++ b/ControlMedico/ControlMedico/ControlMedico.csproj
@@ -38,6 +38,9 @@
 	    <Compile Update="View\ViewMedico\InicioMedico.xaml.cs">
 	      <DependentUpon>InicioMedico.xaml</DependentUpon>
 	    </Compile>
+	    <Compile Update="View\ViewPaciente\NavegacionPaciente.xaml.cs">
+	      <DependentUpon>NavegacionPaciente.xaml</DependentUpon>
+	    </Compile>
     </ItemGroup>
 	
   <ItemGroup>
@@ -56,7 +59,10 @@
     <EmbeddedResource Update="View\ViewMedico\Pacientes.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="View\ViewPaciente\PrincipalPaciente.xaml">
+    <EmbeddedResource Update="View\ViewPaciente\InicioPaciente.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\ViewPaciente\NavegacionPaciente.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
