--- a/ControlMedico/ControlMedico/ControlMedico.csproj
+++ b/ControlMedico/ControlMedico/ControlMedico.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms.BehaviorsPack" Version="3.0.0" />
     <PackageReference Include="Xamarin.Plugin.Calendar" Version="2.0.9699" />
     <PackageReference Include="Xb.Core" Version="1.0.13" />
     <PackageReference Include="Xb.Db" Version="1.0.11" />
@@ -46,6 +47,9 @@
   <ItemGroup>
     <EmbeddedResource Update="View\IniciarSesion.xaml">
       <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\ViewMedico\DetallesCita.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="View\ViewMedico\Monitor.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
