--- a/ControlMedico/ControlMedico/ControlMedico.csproj
+++ b/ControlMedico/ControlMedico/ControlMedico.csproj
@@ -33,6 +33,9 @@
 	    <Compile Update="Views\PrincipalMedico.xaml.cs">
 		    <DependentUpon>PrincipalMedico.xaml</DependentUpon>
 	    </Compile>
+	    <Compile Update="View\ViewMedico\FormularioRegistroMedico.xaml.cs">
+	      <DependentUpon>FormularioRegistroMedico.xaml</DependentUpon>
+	    </Compile>
 	    <Compile Update="View\ViewMedico\NavegacionMedico.xaml.cs">
 	      <DependentUpon>NavegacionMedico.xaml</DependentUpon>
 	    </Compile>
@@ -49,6 +52,9 @@
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="View\ViewMedico\DetallesCita.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\ViewMedico\FormularioRegistroMedico.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="View\ViewMedico\Monitor.xaml">
