--- a/ControlMedico/ControlMedico/ControlMedico.csproj
+++ b/ControlMedico/ControlMedico/ControlMedico.csproj
@@ -75,11 +75,17 @@
     <EmbeddedResource Update="View\ViewPaciente\DetallesCitaPaciente.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\ViewPaciente\FormularioEditarUsuario.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="View\ViewPaciente\InicioPaciente.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="View\ViewPaciente\NavegacionPaciente.xaml">
       <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\ViewPaciente\PerfilPaciente.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
